# dummy_minecraft_server

./: Cargo.toml  Dockerfile  dummy_minecraft_server.toml
.github/workflows/: deploy.yml
src/: main.rs
