[package]
name = "dummy_minecraft_server"
version = "0.1.0"
edition = "2021"

[dependencies]
binrw = "0.13.3"
byteorder = "1.5.0"
eyre = "0.6.12"
futures = "0.3.30"
paste = "1.0.14"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
toml = "0.8.10"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
